SEO endpoint for index robots

--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -17,6 +17,12 @@ http {
     # Resolver pour Docker
     resolver 127.0.0.11 valid=30s;
 
+    # Détection des robots d'indexation
+    map $http_user_agent $is_bot {
+        default 0;
+        ~*(Googlebot|Bingbot|Slurp|DuckDuckBot|Baiduspider|Yandex) 1;
+    }
+
     # Upstream pour PHP-FPM
     upstream php_backend {
         server bentoweb_api:9000 max_fails=2 fail_timeout=10s;
@@ -58,24 +64,26 @@ http {
         root /var/www/front;
         index index.html index.htm;
 
+        # SEO bots: rediriger vers Symfony SEO via rewrite interne
+        if ($is_bot) {
+            rewrite ^ /seo last;
+        }
+
+        # SEO bots: rendu via Symfony (FastCGI)
+        location = /seo {
+            # Direct FastCGI pour route /seo
+            root /var/www/api/public;
+            fastcgi_pass php_backend;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME /var/www/api/public/index.php;
+            fastcgi_param DOCUMENT_ROOT /var/www/api/public;
+            fastcgi_param REQUEST_URI /seo;
+            fastcgi_param PATH_INFO /seo;
+        }
+
         location / {
-            # if ($http_user_agent ~* "(googlebot|bingbot|yandex|baiduspider|duckduckbot|slurp|msnbot)") {
-            #     root /var/www/api/public;
-            #     index index.php;
-            #     try_files $uri /index.php$is_args$args;
-            #     try_files $uri =404;
-            #     fastcgi_pass php_backend;
-            #     fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            #     include fastcgi_params;
-            #     fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            #     fastcgi_param DOCUMENT_ROOT $realpath_root;
-            #     fastcgi_connect_timeout 60s;
-            #     fastcgi_send_timeout 60s;
-            #     fastcgi_read_timeout 60s;
-            #     internal;
-            # }
             try_files $uri $uri/ /index.html =404;
-            # try_files $uri /index.html$is_args$args;
         }
 
         error_page 404 /404.html;
