--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,8 +11,14 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    # Détection des robots d'indexation
+    map $http_user_agent $is_bot {
+        default 0;
+        ~*(Googlebot|Bingbot|Slurp|DuckDuckBot|Baiduspider|Yandex) 1;
+    }
+
     access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log debug;
 
     # Resolver pour Docker
     resolver 127.0.0.11 valid=30s;
@@ -51,6 +57,24 @@ http {
 
         root /var/www/front;
         index index.html index.htm;
+
+        # SEO bots: rediriger vers Symfony SEO via rewrite interne
+        if ($is_bot) {
+            rewrite ^ /seo last;
+        }
+
+        # SEO bots: rendu via Symfony (FastCGI)
+        location = /seo {
+            # Direct FastCGI pour route /seo
+            root /var/www/api/public;
+            fastcgi_pass php_backend;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME /var/www/api/public/index.php;
+            fastcgi_param DOCUMENT_ROOT /var/www/api/public;
+            fastcgi_param REQUEST_URI /seo;
+            fastcgi_param PATH_INFO /seo;
+        }
 
         location / {
             try_files $uri $uri/ /index.html =404;
