--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
   locale: "fr"
 
 services:
+  Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
   # default configuration for services in *this* file
   _defaults:
     autowire: true # Automatically injects dependencies in your services.
@@ -18,6 +19,13 @@ services:
       - "../src/DependencyInjection/"
       - "../src/Entity/"
       - "../src/Kernel.php"
+
+  # Désactiver le profiler via attribut
+  App\EventListener\ProfilerDisableListener:
+    arguments:
+      $profiler: '@?profiler'
+    tags:
+      - { name: kernel.event_subscriber }
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
