--- a/.env
+++ b/.env
@@ -1,21 +1,13 @@
 URL_FRONT_VITE=https://localhost:5173
 URL_FRONT_VITE_PORT=5173
-# URL_FRONT_LOCAL=https://skills2025.local
-# URL_FRONT_PROD=https://bentoweb.fr
 
-# URL_API_LOCAL=https://api.skills2025.local
-# URL_API_PROD=https://api.bentoweb.fr
-
-# API_DATABASE_URL="mysql://skills:password@mysql:3306/skills2025?serverVersion=8.0.32&charset=utf8mb4"
-
-# Domaines pour nginx
 LOCAL_FRONT_DOMAIN="skills2025.local"
 LOCAL_API_DOMAIN="api.skills2025.local"
 
 API_DATABASE_USER="skills"
 API_DATABASE_PASSWORD="password"
 API_DATABASE_NAME="skills2025"
-API_DATABASE_URL="mysql://${API_DATABASE_USER}:${API_DATABASE_PASSWORD}@mysql:3306/${API_DATABASE_NAME}?serverVersion=8.0.32&charset=utf8mb4"
+# API_DATABASE_URL="mysql://${API_DATABASE_USER}:${API_DATABASE_PASSWORD}@mysql:3306/${API_DATABASE_NAME}?serverVersion=8.0.32&charset=utf8mb4"
 
 APP_ENV=dev
 NODE_ENV=development
