--- a/api/composer.json
+++ b/api/composer.json
@@ -85,7 +85,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.2.*"
+            "require": "7.2.*",
+            "docker": false
         }
     },
     "require-dev": {
