--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -1,7 +1,13 @@
+# controllers:
+#     resource:
+#         path: ../src/Controller/
+#         namespace: App\Controller
+#     type: attribute
+
 controllers:
-    resource: ../src/Controller/
-    type: attribute
+  resource: ../src/Controller/
+  type: attribute
 
 api_platform:
-    resource: .
-    type: api_platform
+  resource: .
+  type: api_platform
